New simulator UI

--- a/Jojo Vectores/Jojo Vectores/Base.lproj/Main.storyboard
+++ b/Jojo Vectores/Jojo Vectores/Base.lproj/Main.storyboard
@@ -31,42 +31,40 @@
                                             <action selector="addVector:" destination="BV1-FR-VrT" id="aZj-g8-acc"/>
                                         </connections>
                                     </barButtonItem>
-                                    <barButtonItem style="plain" id="oHP-AL-8tq">
-                                        <textField key="customView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" id="z3r-gb-Wa7">
-                                            <rect key="frame" x="38.5" y="7" width="25" height="30"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <nil key="textColor"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                            <textInputTraits key="textInputTraits"/>
-                                        </textField>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" id="Mnp-1A-yDc">
-                                        <textField key="customView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" id="eNj-f1-Ngj">
-                                            <rect key="frame" x="63.5" y="7" width="25" height="30"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <nil key="textColor"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                            <textInputTraits key="textInputTraits"/>
-                                        </textField>
-                                    </barButtonItem>
                                     <barButtonItem systemItem="undo" id="97w-o7-I26">
                                         <connections>
                                             <action selector="removeVector:" destination="BV1-FR-VrT" id="Onl-0C-bQx"/>
                                         </connections>
                                     </barButtonItem>
+                                    <barButtonItem title="Reset" id="2o1-aO-omU">
+                                        <connections>
+                                            <action selector="removeVector:" destination="BV1-FR-VrT" id="2ab-pa-HmU"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem id="x2O-ey-fgU">
+                                        <connections>
+                                            <action selector="removeVector:" destination="BV1-FR-VrT" id="3UU-8Q-a0r"/>
+                                        </connections>
+                                    </barButtonItem>
                                 </items>
                             </toolbar>
-                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4h9-ON-gx3">
-                                <rect key="frame" x="41" y="501" width="154" height="20.5"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="4h9-ON-gx3">
+                                <rect key="frame" x="12.5" y="501" width="295" height="20.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Magnitud:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sQi-PC-SXh">
-                                        <rect key="frame" x="0.0" y="0.0" width="77" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="155" height="20.5"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="155" id="Fml-c2-CZQ"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dirección:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NhD-iB-FgO">
-                                        <rect key="frame" x="77" y="0.0" width="77" height="20.5"/>
+                                        <rect key="frame" x="175" y="0.0" width="120" height="20.5"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="120" id="1gL-gF-v0g"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
@@ -130,11 +128,11 @@
                             <constraint firstItem="ude-ts-bT0" firstAttribute="centerX" secondItem="3se-qz-xqx" secondAttribute="centerX" id="LXb-7g-oQu"/>
                             <constraint firstItem="Ac4-vX-Drc" firstAttribute="top" secondItem="8aa-yV-Osq" secondAttribute="bottom" constant="8" id="OpG-0s-igd"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Ac4-vX-Drc" secondAttribute="trailing" constant="11" id="OvF-G0-uQ9"/>
-                            <constraint firstItem="4h9-ON-gx3" firstAttribute="leading" secondItem="3se-qz-xqx" secondAttribute="leadingMargin" constant="25" id="UFD-Tt-IbZ"/>
                             <constraint firstItem="Ac4-vX-Drc" firstAttribute="centerX" secondItem="3se-qz-xqx" secondAttribute="centerX" id="YCx-fk-RdJ"/>
                             <constraint firstItem="A73-lX-ugh" firstAttribute="leading" secondItem="3se-qz-xqx" secondAttribute="leading" id="i8k-CV-RbI"/>
                             <constraint firstItem="A73-lX-ugh" firstAttribute="top" secondItem="4h9-ON-gx3" secondAttribute="bottom" constant="2.5" id="kWK-fH-lCr"/>
                             <constraint firstItem="A73-lX-ugh" firstAttribute="bottom" secondItem="qHh-Mt-9TT" secondAttribute="top" id="qBE-8O-fkR"/>
+                            <constraint firstItem="4h9-ON-gx3" firstAttribute="centerX" secondItem="3se-qz-xqx" secondAttribute="centerX" id="uSs-YD-59t"/>
                         </constraints>
                     </view>
                     <connections>
@@ -142,9 +140,7 @@
                         <outlet property="SumLb" destination="Bko-Dd-ewt" id="FpM-Yh-n1l"/>
                         <outlet property="SumLb2" destination="OhI-cG-kfj" id="dE9-pb-2d1"/>
                         <outlet property="dirLb" destination="NhD-iB-FgO" id="XcT-dp-vfj"/>
-                        <outlet property="directionTextField" destination="eNj-f1-Ngj" id="wgK-et-n0J"/>
                         <outlet property="magLb" destination="sQi-PC-SXh" id="qr4-86-Jxk"/>
-                        <outlet property="magnitudeTextField" destination="z3r-gb-Wa7" id="iGE-DG-fgI"/>
                         <outlet property="movebt" destination="Bb6-rF-m0j" id="BeG-E5-DEj"/>
                         <outlet property="stackLb" destination="4h9-ON-gx3" id="5JX-4k-WWO"/>
                         <outlet property="stackTop" destination="Ac4-vX-Drc" id="7WP-xZ-B2b"/>
